--- a/src/scss/pages/_aboutContent.scss
+++ b/src/scss/pages/_aboutContent.scss
@@ -1,3 +1,9 @@
 .about-content {
   padding:  0 50px;
 }
+
+@media screen and (max-width: 768px) {
+  .about-content {
+    padding: 0;
+  }
+}
